--- a/index.html
+++ b/index.html
@@ -21,6 +21,41 @@
       ::-webkit-scrollbar-thumb:hover {
         background: #0ea5e9; /* sky-500 */
       }
+
+      /* Custom Checkbox for Tasks */
+      .task-checkbox {
+        appearance: none;
+        background-color: transparent;
+        border: 2px solid #94a3b8; /* slate-400 */
+        width: 1.25rem;
+        height: 1.25rem;
+        border-radius: 0.375rem; /* rounded-md */
+        cursor: pointer;
+        position: relative;
+        transition: all 0.2s ease-in-out;
+        flex-shrink: 0;
+      }
+      .task-checkbox:checked {
+        background-color: #0ea5e9; /* sky-500 */
+        border-color: #0ea5e9; /* sky-500 */
+      }
+      .task-checkbox:checked::after {
+        content: '✔';
+        color: white;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1.2);
+        font-weight: bold;
+      }
+      .task-label {
+        transition: all 0.2s ease-in-out;
+      }
+      .task-checkbox:checked + .task-label {
+        text-decoration: line-through;
+        color: #64748b; /* slate-500 */
+        transform: translateX(4px);
+      }
     </style>
   <script type="importmap">
 {
